# Multi-Agent-RAG-Research-Assistant

./: .gitignore  My  PROJECT_EXPLANATION.md  README.md  main.py  pyproject.toml  run.py
ai_newsroom.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: __init__.py  settings.py
crew/: __init__.py  agents.py  agents_rag.py  crew.py  orchestrator.py
crew/prompts/: factchecker.txt  illustrator.txt  planner.txt  publisher.txt  summarizer.txt
crew/tools/: formatter.py  image_gen.py  news_api.py
data/: AIA Forcaster Technical Report.txt  Future of AI Models .txt  LLMs for SDE.txt
rag/: __init__.py  ingest.py  retriever.py
scripts/: pdf_to_txt.py
