# FILE: pyproject.toml
# Purpose: Project metadata + dependencies + build system (needed for `pip install -e .`)

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-newsroom"
version = "0.1.0"
description = "Multi-Agent AI Newsroom (CrewAI) — summarize, fact-check, illustrate, publish."
dependencies = [
  "crewai>=0.28.0",
  "openai>=1.50.0",
  "feedparser",
  "python-dotenv",
  "streamlit",
  "pytest",
]
